<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android">
	<com.chess.genesis.MyImageView
	android:id="@+id/topbar"
	style="@style/FillWidth"
	android:src="@drawable/topbar"/>
	<TableRow
	android:id="@+id/layout01"
	style="@style/FillWidth"
	android:layout_below="@id/topbar"
	android:background="#ff383838">
		<com.chess.genesis.TabText
		android:id="@+id/white_name"
		style="@style/FillWidth"
		android:gravity="center"
		android:padding="6dp"
		android:textSize="14dp"
		android:layout_weight="50"/>
		<com.chess.genesis.TabText
		android:id="@+id/black_name"
		style="@style/FillWidth"
		android:gravity="center"
		android:padding="6dp"
		android:textSize="14dp"
		android:layout_weight="50"/>
	</TableRow>
	<com.chess.genesis.ViewFlip3D
	android:id="@+id/board_flip"
	android:layout_below="@id/layout01">
		<com.chess.genesis.BoardLayout
		android:id="@+id/board_layout"/>
		<com.chess.genesis.PlaceLayout
		android:id="@+id/place_layout"/>
	</com.chess.genesis.ViewFlip3D>
	<TableRow
	android:layout_alignParentBottom="true">
		<com.chess.genesis.MyImageView
		android:id="@+id/place_piece"
		style="@style/FillWidth"
		android:layout_weight="243"
		android:src="@drawable/place_piece"/>
		<com.chess.genesis.MyImageView
		android:id="@+id/backwards"
		style="@style/FillWidth"
		android:layout_weight="398"
		android:src="@drawable/backwards"/>
		<com.chess.genesis.MyImageView
		android:id="@+id/forwards"
		style="@style/FillWidth"
		android:layout_weight="398"
		android:src="@drawable/forwards"/>
		<com.chess.genesis.MyImageView
		android:id="@+id/current"
		style="@style/FillWidth"
		android:layout_weight="398"
		android:src="@drawable/current"/>
	</TableRow>
</RelativeLayout>
