...
			android:id="@+id/genesis_radio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Genesis"/>

		<RadioButton
			android:id="@+id/regular_radio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Regular"/>
	</RadioGroup>

	<TextView
...
		android:layout_marginTop="8dp"
		android:orientation="horizontal"
		app:layout_constraintStart_toStartOf="@+id/type_group"
		app:layout_constraintTop_toBottomOf="@+id/white_group">

		<RadioButton
			android:id="@+id/black_human"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:text="Human"/>

		<RadioButton
...
