<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
	android:id="@+id/new_game"
	app:showAsAction="ifRoom"
	android:icon="@android:drawable/ic_menu_add"
	android:title="New Game"/>
	<item
	android:id="@+id/import_game"
	android:icon="@android:drawable/ic_menu_save"
	android:title="Import Game"/>
</menu>
